--- a/index.html
+++ b/index.html
@@ -51,32 +51,58 @@
             <i class="fa fa-quora"><br><label>Quora</label></i>
         </section>
 
+        <div class="top-nav">
+            <button class="top-nav-btn">All</button>
+            <button class="top-nav-btn">Debates</button>
+            <button class="top-nav-btn">Comedy</button>
+            <button class="top-nav-btn">Gadgets</button>
+            <button class="top-nav-btn">Holiday</button>
+            <button class="top-nav-btn">Computer programming</button>
+            <button class="top-nav-btn">Machines</button>
+            <button class="top-nav-btn">Music</button>
+            <button class="top-nav-btn">Movies</button>
+            <button class="top-nav-btn">Mixes</button>
+            <button class="top-nav-btn">Real-estate</button>
+            <button class="top-nav-btn">Software</button>
+            <button class="top-nav-btn">Windows OS</button>
+            <button class="top-nav-btn">Real-estate</button>
+            <button class="top-nav-btn">Software</button>
+            <button class="top-nav-btn">Windows OS</button>
+        </div>
+
         <section class="main-body">
-            <div class="top-nav">
-                <button class="top-nav-btn">All</button>
-                <button class="top-nav-btn">Debates</button>
-                <button class="top-nav-btn">Comedy</button>
-                <button class="top-nav-btn">Gadgets</button>
-                <button class="top-nav-btn">Holiday</button>
-                <button class="top-nav-btn">Computer programming</button>
-                <button class="top-nav-btn">Machines</button>
-                <button class="top-nav-btn">Music</button>
-                <button class="top-nav-btn">Movies</button>
-                <button class="top-nav-btn">Mixes</button>
-                <button class="top-nav-btn">Real-estate</button>
-                <button class="top-nav-btn">Software</button>
-                <button class="top-nav-btn">Windows OS</button>
-                <button class="top-nav-btn">Real-estate</button>
-                <button class="top-nav-btn">Software</button>
-                <button class="top-nav-btn">Windows OS</button>
-            </div>
-
-            <div class="content-area">
-
-            </div>
+            <section class="content-area">
+                <div class="main-thumbnail"><img
+                        src="https://assets-global.website-files.com/616e938268c8f0a92cb2b540/626b2105eca8a62c25bbd9f0_youtube%20thumbnail%20size%20and%20best%20practices%20by%20veed%20studio.jpg"
+                        class="thumbnail"><br>
+                    <div class="description">
+                        <img src="/resources/img1-01.png" class="profile post">
+                        <strong>Creating youtube thumbnails</strong>
+                    </div>
+                    <div class="desc">This is demo description<br>43K views. 6 months ago</div>
+                </div>
+                <div class="main-thumbnail"><img
+                        src="https://assets-global.website-files.com/616e938268c8f0a92cb2b540/626b2105eca8a62c25bbd9f0_youtube%20thumbnail%20size%20and%20best%20practices%20by%20veed%20studio.jpg"
+                        class="thumbnail"><br>
+                    <div class="description">
+                        <img src="/resources/img1-01.png" class="profile post">
+                        <strong>Creating youtube thumbnails</strong>
+                    </div>
+                    <div class="desc">This is demo description<br>43M views. 6 hours ago</div>
+                </div>
+                <div class="main-thumbnail"><img
+                        src="https://assets-global.website-files.com/616e938268c8f0a92cb2b540/626b2105eca8a62c25bbd9f0_youtube%20thumbnail%20size%20and%20best%20practices%20by%20veed%20studio.jpg"
+                        class="thumbnail"><br>
+                    <div class="description">
+                        <img src="/resources/img1-01.png" class="profile post">
+                        <strong>Creating youtube thumbnails</strong>
+                    </div>
+                    <div class="desc">This is demo description<br>3K views. 2 years ago</div>
+                </div>
+            </section>
         </section>
     </main>
-    
+
 </body>
 
 </html>
