--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/style.css" />
-    <title>YouTube</title>
+    <title>YouTube Mockup</title>
 </head>
 
 <body>
